# kestrel-protocol

./: Cargo.toml  README.md  dev-principal.md
.cargo/: config.toml
.cursor/rules/: ai-dev-guide.mdc  status-report.mdc
.github/workflows/: mdbook.yml
docs/: book.toml
docs/src/: Introduction.md  SUMMARY.md
docs/src/dev-docs/: 01-connection-shutdown.md  01-stream-to-packet.md  02-connection-shutdown.md  README.md
docs/src/features/: 01-packet-serialization-deserialization.md
docs/src/project-guidance/: 01-status-report.md  02-ai-dev-guide.md
src/: buffer.rs  config.rs  congestion.rs  congestion_control.rs  connection.rs  core.rs  error.rs  lib.rs  packet.rs  socket.rs  testing.rs  timer.rs
src/congestion/: tests.rs  vegas.rs
src/core/: endpoint.rs  reliability.rs  stream.rs  test_utils.rs  tests.rs
src/core/endpoint/: builder.rs  command.rs  constructors.rs  core.rs  event_dispatcher.rs  frame_factory.rs  frame_processors.rs  lifecycle.rs  lifecycle_manager.rs  logic.rs  operations.rs  processing.rs  sending.rs  state.rs  state_manager.rs  tests.rs  timing.rs  types.rs  unified_scheduler.rs
src/core/tests/: state.rs  (+6 more)
src/packet/: command.rs  frame.rs  header.rs  sack.rs  tests.rs
src/socket/: actor.rs  command.rs  draining.rs  event_loop.rs  handle.rs  routing.rs  sender.rs  tests.rs  traits.rs  transport.rs  zerortt.rs
src/timer/: actor.rs  event.rs  hybrid_system.rs  parallel.rs  task.rs  tests.rs  wheel.rs
tests/: lifecycle.rs  packet_coalescing.rs  packet_reordering.rs  timer_integration.rs  zero_rtt.rs
tests/common/: harness.rs  mod.rs
(+153 files in other folders)
