[package]
name = "kestrel-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
dashmap = "6.1.0"
rand = "0.9.2"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full", "test-util"] }
tracing = "0.1.41"

[dev-dependencies]
futures = "0.3"
tracing-subscriber = "0.3.19"
