[package]
name = "kestrel-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.7.1"
async-channel = "2.5.0"
async-trait = "0.1.88"
bytes = "1.10.1"
futures = "0.3"
once_cell = "1.21.3"
rand = "0.9.2"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full", "test-util"] }
tracing = "0.1.41"
wide = "0.7"
rayon = "1.10.0"
num_cpus = "1.16"

[dev-dependencies]
tracing-subscriber  = { version = "0.3.19", features = ["env-filter"] }
mdbook = "0.4.52"
mdbook-mermaid = "0.15.0"
fastrand = "2.3.0"

[workspace]
resolver = "2"
